<resources>
    <string name="app_name">BeWell</string>
    <string name="copyright">Copyright © 2016 Intel Corporation. All rights reserved. </string>
    <string name="action_settings">Settings</string>
    <string name="device_settings">Connect</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_care_giver_phone">Caregiver phone number</string>
    <string name="pref_title_wellbeing_message">Wellbeing message</string>
    <string name="pref_title_activity_message">Activity message</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Wearable Notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_led">LED light</string>
    <string name="pref_title_receipt">Auto receipt</string>

    <string name="pref_title_haptic_intensity">Intensity</string>
    <string name="pref_title_led_color">Color</string>

    <!-- Example settings for User events -->
    <string name="pref_header_user_response">User Response</string>
    <string name="pref_title_double_tap">Double tap</string>
    <string name="pref_title_tripple_tap">Tripple tap</string>
    <string name="pref_title_single_button_press">Single button press</string>
    <string name="pref_title_double_button_press">Double button press</string>
    <string name="pref_title_long_button_press">Long button press</string>

    <!-- Example settings for Body events -->
    <string name="pref_header_user_activity">User Activity</string>
    <string name="inactivity_threshold">Inactivity Threshold</string>
    <string name="pref_user_activity">Activity Notifications</string>

    <string-array name="pref_haptic_list_titles">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_haptic_list_values">
        <item>255</item>
        <item>128</item>
        <item>64</item>
    </string-array>

    <string-array name="pref_led_list_titles">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="pref_led_list_values">
        <item>0xFF0000</item>
        <item>0x00FF00</item>
        <item>0x0000FF</item>
    </string-array>
    <string name="title_activity_device_scanning">Wearable Device Discovery</string>

    <string name="scan_button_text">Scan</string>
    <string name="stop_scan_button_text">Stop</string>
    <string name="no_devices_detected">No devices detected</string>
    <string name="title_activity_device_pairing">Wearable Device Configuration</string>

    // Pairing resources
    <string name="pairing_to_text">Pairing to...</string>
    <string name="unpairing_from_text">Unpairing from...</string>
    <string name="battery_level">Battery level:</string>
    <string name="software_revision">Software revision:</string>
    <string name="unknown">Unknown</string>
    <string name="connect_device_button">Connect</string>
    <string name="disconnect_device_button">Disconnect</string>
    <string name="pair_device_button">Pair</string>
    <string name="unpair_device_button">Unpair</string>
    <string name="paired_text">Paired</string>
    <string name="connecting_to_text">Connecting to...</string>
    <string name="connected_to_text">Connected to...</string>
    <string name="paired_to_text">Paired to...</string>
    <string name="not_paired_to_text">Not paired to...</string>
    <string name="connected_text">Connected</string>

</resources>
