<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="user_activity_switch"
        android:title="@string/pref_user_activity" />

    <SwitchPreference
        android:dependency="user_activity_switch"
        android:defaultValue="true"
        android:key="activity_haptic_switch"
        android:title="@string/pref_title_vibrate" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <ListPreference
        android:defaultValue="-1"
        android:dependency="activity_haptic_switch"
        android:entries="@array/pref_haptic_list_titles"
        android:entryValues="@array/pref_haptic_list_values"
        android:key="activity_haptic_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_haptic_intensity" />

    <SwitchPreference
        android:dependency="user_activity_switch"
        android:defaultValue="true"
        android:key="activity_led_switch"
        android:title="@string/pref_title_led" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <ListPreference
        android:defaultValue="-1"
        android:dependency="activity_led_switch"
        android:entries="@array/pref_led_list_titles"
        android:entryValues="@array/pref_led_list_values"
        android:key="activity_led_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_led_color" />

    <EditTextPreference
        android:dependency="user_activity_switch"
        android:key="inactivity_threshold"
        android:defaultValue=""
        android:inputType="time"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/inactivity_threshold" />

</PreferenceScreen>
