<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="double_tap"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_double_tap" />

    <EditTextPreference
        android:key="tripple_tap"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_tripple_tap" />

    <EditTextPreference
        android:key="single_button_press"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_single_button_press" />

    <EditTextPreference
        android:key="double_button_press"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_double_button_press" />

    <EditTextPreference
        android:key="long_button_press"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_long_button_press" />

</PreferenceScreen>
