<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="haptic_switch"
        android:title="@string/pref_title_vibrate" />

     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <ListPreference
        android:defaultValue="-1"
        android:dependency="haptic_switch"
        android:entries="@array/pref_haptic_list_titles"
        android:entryValues="@array/pref_haptic_list_values"
        android:key="haptic_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_haptic_intensity" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="led_switch"
        android:title="@string/pref_title_led" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <ListPreference
        android:defaultValue="-1"
        android:dependency="led_switch"
        android:entries="@array/pref_led_list_titles"
        android:entryValues="@array/pref_led_list_values"
        android:key="led_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_led_color" />

</PreferenceScreen>
