<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="caregiver_phone_number"
        android:defaultValue=""
        android:inputType="phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_care_giver_phone" />

    <EditTextPreference
        android:key="wellbeing_message"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_wellbeing_message" />

    <EditTextPreference
        android:key="activity_message"
        android:defaultValue=""
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_activity_message" />

</PreferenceScreen>
